# matrix-rust-sdk

./: Cargo.toml  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
.cargo/: config.toml
.github/workflows/: bindings_ci.yml
crates/matrix-sdk/: Cargo.toml  (+1 more)
crates/matrix-sdk-sanakirja/: Cargo.toml
crates/matrix-sdk-sanakirja/src/: crypto_store.rs  lib.rs
examples/create-room/: Cargo.toml
examples/create-room/src/: main.rs
matrix_sdk/: all.html  attr.async_trait.html  enum.ClientBuildError.html  enum.DisplayName.html  enum.Error.html  enum.HttpError.html  enum.IdParseError.html  enum.ImageError.html  enum.LoopCtrl.html  enum.RefreshTokenError.html  enum.RoomState.html  enum.RumaApiError.html  enum.StoreError.html  fn.sanitize_server_name.html  index.html  sidebar-items.js  struct.Account.html  struct.BaseRoom.html  struct.BaseRoomMember.html  struct.Client.html  struct.ClientBuilder.html  struct.LoginBuilder.html  struct.OwnedServerName.html  struct.RoomInfo.html  struct.ServerName.html  struct.Session.html  struct.SsoLoginBuilder.html  struct.StateChanges.html  struct.UnknownToken.html  trait.AsyncTraitDeps.html  trait.HttpSend.html  trait.SendOutsideWasm.html  trait.SyncOutsideWasm.html  type.HttpResult.html  type.Result.html
matrix_sdk_appservice/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.AppService.html  struct.AppServiceBuilder.html  struct.AppServiceRouter.html  type.Result.html
matrix_sdk_base/: all.html  enum.DisplayName.html  enum.Error.html  enum.MinimalStateEvent.html  enum.RoomState.html  index.html  sidebar-items.js  struct.BaseClient.html  struct.OriginalMinimalStateEvent.html  struct.RedactedMinimalStateEvent.html  struct.Room.html  struct.RoomInfo.html  struct.RoomMember.html  struct.Session.html  struct.SessionMeta.html  struct.SessionTokens.html  trait.AsyncTraitDeps.html  trait.SendOutsideWasm.html  trait.SyncOutsideWasm.html  type.MinimalRoomMemberEvent.html  type.Result.html
matrix_sdk_common/: all.html  index.html  sidebar-items.js  trait.AsyncTraitDeps.html  trait.SendOutsideWasm.html  trait.SyncOutsideWasm.html
matrix_sdk_crypto/: all.html  enum.DecryptorError.html  enum.EventError.html  enum.KeyExportError.html  enum.LocalTrust.html  enum.MegolmError.html  enum.OlmError.html  enum.QrVerificationState.html  enum.ReadOnlyUserIdentities.html  enum.SasState.html  enum.ScanError.html  enum.SessionCreationError.html  enum.SignatureError.html  enum.UserIdentities.html  enum.Verification.html  enum.VerificationRequestState.html  fn.decrypt_room_key_export.html  fn.encrypt_room_key_export.html  fn.format_emojis.html  index.html  sidebar-items.js  static.VERSION.html  struct.AcceptSettings.html  struct.AcceptedProtocols.html  struct.AttachmentDecryptor.html  struct.AttachmentEncryptor.html  struct.CancelInfo.html  struct.Device.html  struct.Emoji.html  struct.EmojiShortAuthString.html  struct.GossipRequest.html  struct.MediaEncryptionInfo.html  struct.OlmMachine.html  struct.OwnUserIdentity.html  struct.QrVerification.html  struct.ReadOnlyDevice.html  struct.ReadOnlyOwnUserIdentity.html  struct.ReadOnlyUserIdentity.html  struct.RoomKeyImportResult.html  struct.Sas.html  (+3 more)
matrix_sdk_indexeddb/: all.html  enum.IndexeddbCryptoStoreError.html  enum.IndexeddbStateStoreError.html  enum.MigrationConflictStrategy.html  enum.OpenStoreError.html  fn.make_store_config.html  index.html  sidebar-items.js  struct.IndexeddbCryptoStore.html  struct.IndexeddbStateStore.html  struct.IndexeddbStateStoreBuilder.html
matrix_sdk_qrcode/: all.html  enum.DecodingError.html  enum.EncodingError.html  enum.QrVerificationData.html  index.html  sidebar-items.js  struct.SelfVerificationData.html  struct.SelfVerificationNoMasterKey.html  struct.VerificationData.html
matrix_sdk_sled/: all.html  enum.MigrationConflictStrategy.html  enum.OpenStoreError.html  fn.make_store_config.html  index.html  sidebar-items.js  struct.SledCryptoStore.html  struct.SledStateStore.html  struct.SledStateStoreBuilder.html
matrix_sdk_sqlite/: all.html  enum.OpenStoreError.html  index.html  sidebar-items.js
matrix_sdk_store_encryption/: all.html  enum.Error.html  index.html  struct.EncryptedValue.html  struct.StoreCipher.html
(+674 files in other folders)
