[workspace]
members = [
    "benchmarks",
    "bindings/matrix-sdk-crypto-ffi",
    "bindings/matrix-sdk-crypto-js",
    "bindings/matrix-sdk-crypto-nodejs",
    "bindings/matrix-sdk-ffi",
    "crates/*",
    "testing/*",
    "examples/*",
    "labs/*",
    "uniffi-bindgen",
    "xtask",
]
# xtask, labs, testing and the bindings should only be built when invoked explicitly.
default-members = ["benchmarks", "crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.65"

[workspace.dependencies]
anyhow = "1.0.68"
async-stream = "0.3.3"
async-trait = "0.1.60"
base64 = "0.21.0"
byteorder = "1.4.3"
ctor = "0.1.26"
dashmap = "5.2.0"
eyeball = "0.1.3"
eyeball-im = "0.1.0"
http = "0.2.6"
ruma = { version = "0.8.0", features = ["client-api-c"] }
ruma-common = "0.11.2"
once_cell = "1.16.0"
serde = "1.0.151"
serde_html_form = "0.2.0"
serde_json = "1.0.91"
thiserror = "1.0.38"
tracing = { version = "0.1.36", default-features = false, features = ["std"] }
uniffi = "0.23.0"
uniffi_bindgen = "0.23.0"
vodozemac = { git = "https://github.com/matrix-org/vodozemac", rev = "12b24e909107c1fac23245376f294eaf48ba186a" }
zeroize = "1.3.0"

# Patches for building on watchOS.
[patch.crates-io]
# Use the tvOS/watchOS support that is yet to be included in a 0.2.x release.
getrandom = { git = "https://github.com/rust-random/getrandom", rev = "8e44d13ebf7e53f8d2b32c9b63caab8a993d30e4" }
# Forked with the tvOS/watchOS support from 0.2 cherry-picked into the 0.1 branch.
getrandom1 = { git = "https://github.com/pixlwave/getrandom", package = "getrandom", branch = "0.1" }
# Forked with the std feature from 2.x cherry-picked into the 1.x branch.
indexmap = { git = "https://github.com/pixlwave/indexmap", branch = "indexmap-1.x" }

# Default release profile, select with `--release`
[profile.release]
lto = true

# Default development profile; default for most Cargo commands, otherwise
# selected with `--debug`
[profile.dev]
# Saves a lot of disk space. If symbols are needed, use the dbg profile.
debug = 0

[profile.dev.package]
# Optimize quote even in debug mode. Speeds up proc-macros enough to account
# for the extra time of optimizing it for a clean build of matrix-sdk-ffi.
quote = { opt-level = 2 }
sha2 = { opt-level = 2 }

# Custom profile with full debugging info, use `--profile debug` to select
[profile.dbg]
inherits = "dev"
debug = 2

# Custom profile for use in (debug) builds of the binding crates, use
# `--profile release_dbg` to select
[profile.reldbg]
inherits = "dev"
incremental = false

# Compile all non-workspace crate in the dependency tree with optimizations
[profile.reldbg.package."*"]
opt-level = 3
