[package]
name = "matrix-sdk-sanakirja"
version = "0.1.0"
edition = "2021"

[features]
default = ["crypto-store"]

crypto-store = ["dep:matrix-sdk-crypto"]

[dependencies]
async-trait = "0.1.59"
matrix-sdk-common = { version = "0.6.0", path = "../matrix-sdk-common" }
matrix-sdk-crypto = { version = "0.6.0", path = "../matrix-sdk-crypto", optional = true }
matrix-sdk-store-encryption = { version = "0.2.0", path = "../matrix-sdk-store-encryption" }
ruma = { workspace = true }
sanakirja = "1.2.16"
serde = "1.0.149"
serde_json = "1.0.89"
thiserror = "1.0.37"

[dev-dependencies]
matrix-sdk-crypto = { path = "../matrix-sdk-crypto", features = ["testing"] }
matrix-sdk-test = { version = "0.6.0", path = "../../testing/matrix-sdk-test" }
once_cell = "1.16.0"
tempfile = "3.3.0"
tokio = { version = "1.17.0", default-features = false, features = ["rt-multi-thread", "macros"] }
