[package]
name = "create-room"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "create-room"
test = false

[dependencies]
anyhow = "1"
clap = { version = "4.0.18", features = ["derive"] }
futures = "0.3"
futures-signals = { version = "0.3.30", default-features = false }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.15"
url = "2.2.2"

[dependencies.matrix-sdk]
path = "../../crates/matrix-sdk"
features = ["experimental-timeline", "sled"]
version = "0.6.0"
